fix minor bib error

--- a/references.bib
+++ b/references.bib
@@ -2,6 +2,27 @@
 % Encoding: UTF-8
 
 
+@InProceedings{abadi2006integrating,
+  Title                    = {Integrating compression and execution in column-oriented database systems},
+  Author                   = {Abadi, Daniel and Madden, Samuel and Ferreira, Miguel},
+  Booktitle                = {Proceedings of the 2006 ACM SIGMOD international conference on Management of data},
+  Year                     = {2006},
+  Organization             = {ACM},
+  Pages                    = {671--682}
+}
+
+@Article{abadi2009column,
+  Title                    = {Column-oriented database systems},
+  Author                   = {Abadi, Daniel J and Boncz, Peter A and Harizopoulos, Stavros},
+  Journal                  = {Proceedings of the VLDB Endowment},
+  Year                     = {2009},
+  Number                   = {2},
+  Pages                    = {1664--1665},
+  Volume                   = {2},
+
+  Publisher                = {VLDB Endowment}
+}
+
 @Article{aging,
   Title                    = {Humanity's Aging},
   Author                   = {National Institute on Aging},
@@ -113,6 +134,13 @@
   Timestamp                = {2015.10.12}
 }
 
+@Book{banker2011mongodb,
+  Title                    = {MongoDB in action},
+  Author                   = {Banker, Kyle},
+  Publisher                = {Manning Publications Co.},
+  Year                     = {2011}
+}
+
 @Article{bannermanCloud,
   Title                    = {Cloud Computing Adoption Risks: State of Play},
   Author                   = {Bannerman},
@@ -151,6 +179,15 @@
 
   Owner                    = {ilias},
   Timestamp                = {2015.10.10}
+}
+
+@InCollection{bertino1997object,
+  Title                    = {Object-oriented databases},
+  Author                   = {Bertino, Elisa and Ooi, Beng Chin and Sacks-Davis, Ron and Tan, Kian-Lee and Zobel, Justin and Shidlovsky, Boris and Catania, Barbara},
+  Booktitle                = {Indexing Techniques for Advanced Database Systems},
+  Publisher                = {Springer},
+  Year                     = {1997},
+  Pages                    = {1--38}
 }
 
 @Article{Blumenthal2009,
@@ -249,6 +286,21 @@
   Timestamp                = {2015.10.11}
 }
 
+@Article{Briscoe2009,
+  Title                    = {Digital Ecosystems in the Clouds: Towards Community Cloud Computing},
+  Author                   = {Gerard Briscoe and
+ Alexandros Marinos},
+  Journal                  = {CoRR},
+  Year                     = {2009},
+  Volume                   = {abs/0903.0694},
+
+  Bibsource                = {dblp computer science bibliography, http://dblp.org},
+  Biburl                   = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-0903-0694},
+  Owner                    = {revekka},
+  Timestamp                = {Mon, 05 Dec 2011 18:05:28 +0100},
+  Url                      = {http://arxiv.org/abs/0903.0694}
+}
+
 @Article{Cattell:2011:SSN:1978915.1978919,
   Title                    = {Scalable SQL and NoSQL Data Stores},
   Author                   = {Cattell, Rick},
@@ -268,21 +320,6 @@
   Numpages                 = {16},
   Publisher                = {ACM},
   Url                      = {http://doi.acm.org/10.1145/1978915.1978919}
-}
-
-@Article{Briscoe2009,
-  Title                    = {Digital Ecosystems in the Clouds: Towards Community Cloud Computing},
-  Author                   = {Gerard Briscoe and
- Alexandros Marinos},
-  Journal                  = {CoRR},
-  Year                     = {2009},
-  Volume                   = {abs/0903.0694},
-
-  Bibsource                = {dblp computer science bibliography, http://dblp.org},
-  Biburl                   = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-0903-0694},
-  Owner                    = {revekka},
-  Timestamp                = {Mon, 05 Dec 2011 18:05:28 +0100},
-  Url                      = {http://arxiv.org/abs/0903.0694}
 }
 
 @InProceedings{Gamification_on_Participation,
@@ -441,6 +478,28 @@
 
   Owner                    = {ilias},
   Timestamp                = {2015.10.04}
+}
+
+@Article{DeCandia:2007:DAH:1323293.1294281,
+  Title                    = {Dynamo: Amazon's Highly Available Key-value Store},
+  Author                   = {DeCandia, Giuseppe and Hastorun, Deniz and Jampani, Madan and Kakulapati, Gunavardhan and Lakshman, Avinash and Pilchin, Alex and Sivasubramanian, Swaminathan and Vosshall, Peter and Vogels, Werner},
+  Journal                  = {SIGOPS Oper. Syst. Rev.},
+  Year                     = {2007},
+
+  Month                    = oct,
+  Number                   = {6},
+  Pages                    = {205--220},
+  Volume                   = {41},
+
+  Acmid                    = {1294281},
+  Address                  = {New York, NY, USA},
+  Doi                      = {10.1145/1323293.1294281},
+  ISSN                     = {0163-5980},
+  Issue_date               = {December 2007},
+  Keywords                 = {performance, reliability, scalability},
+  Numpages                 = {16},
+  Publisher                = {ACM},
+  Url                      = {http://doi.acm.org/10.1145/1323293.1294281}
 }
 
 @InProceedings{Deterding:2011:GDE:2181037.2181040,
@@ -676,6 +735,14 @@ Timothy Grance},
   Timestamp                = {2015.10.11}
 }
 
+@Article{grazioli2014mapping,
+  Title                    = {Mapping relational databases into a distributed NoSQL},
+  Author                   = {GRAZIOLI, FRANCESCO},
+  Year                     = {2014},
+
+  Publisher                = {Italy}
+}
+
 @Article{filloKivernisews,
   Title                    = {Ministerial directive Υ4γ-ΟΙΚ.121672-2009},
   Author                   = {Government of Greece},
@@ -795,6 +862,15 @@ Timothy Grance},
   Keywords                 = {SQL;cloud computing;query processing;relational databases;CAP theorem;Internet;NoSQL database;SNS;cloud computing;data model;high-concurrency applications;query dynamic user data;relational database;search engines;Blogs;Computational modeling;Databases;Facebook;Reliability;Big Data;NoSQL;column-oriented;database;document;key-value}
 }
 
+@InProceedings{he2008graphs,
+  Title                    = {Graphs-at-a-time: query language and access methods for graph databases},
+  Author                   = {He, Huahai and Singh, Ambuj K},
+  Booktitle                = {Proceedings of the 2008 ACM SIGMOD international conference on Management of data},
+  Year                     = {2008},
+  Organization             = {ACM},
+  Pages                    = {405--418}
+}
+
 @Electronic{hematologyBasics,
   Title                    = {Blood Basics},
   Author                   = {American Society of Hemology},
@@ -906,6 +982,23 @@ Timothy Grance},
   Timestamp                = {2015.10.13}
 }
 
+@Book{kim1990introduction,
+  Title                    = {Introduction to object-oriented databases},
+  Author                   = {Kim, Won},
+  Publisher                = {MIT press Cambridge, MA},
+  Year                     = {1990},
+  Volume                   = {90}
+}
+
+@InProceedings{kim2014object,
+  Title                    = {The Object-Oriented Database System},
+  Author                   = {Kim, W and Nicolas, JM and Nishio, S},
+  Booktitle                = {Deductive and Object-Oriented Databases: Proceedings of the First International Conference on Deductive and Object-Oriented Databases (DOOD89) Kyoto Research Park, Kyoto, Japan, 4-6 December 1989},
+  Year                     = {2014},
+  Organization             = {Elsevier},
+  Pages                    = {223}
+}
+
 @Article{landsteinerABO,
   Title                    = {Zur Kenntnis der antifermentativen, lytischen und agglutinierenden Wirkungen des Blutserums und der Lymphe},
   Author                   = {Karl Landsteiner},
@@ -928,6 +1021,17 @@ Timothy Grance},
   Doi                      = {10.3181/00379727-43-11151},
   Eprint                   = {http://ebm.sagepub.com/content/43/1/223.full.pdf+html},
   Url                      = {http://ebm.sagepub.com/content/43/1/223.short}
+}
+
+@Article{leavitt2000whatever,
+  Title                    = {Whatever happened to object-oriented databases?},
+  Author                   = {Leavitt, Neal},
+  Journal                  = {Computer},
+  Year                     = {2000},
+  Number                   = {8},
+  Pages                    = {16--19},
+
+  Publisher                = {IEEE}
 }
 
 @Electronic{bloodVolume,
@@ -1032,10 +1136,8 @@ Timothy Grance},
 }
 
 @Article{Missbach,
-  Title                    = {Private Cloud Infrastructures for
-SAP},
-  Author                   = {M. Missbach, J. Stelzel, C. Gardiner, G. Anderson
-and M. Tempes},
+  Title                    = {Private Cloud Infrastructures for SAP},
+  Author                   = {M. Missbach, J. Stelzel},
   Journal                  = {Springer Berlin Heidelberg},
   Year                     = {2013},
 
@@ -1190,6 +1292,13 @@ and M. Tempes},
   Timestamp                = {2015.10.13}
 }
 
+@Book{redmond2012seven,
+  Title                    = {Seven databases in seven weeks: a guide to modern databases and the NoSQL movement},
+  Author                   = {Redmond, Eric and Wilson, Jim R},
+  Publisher                = {Pragmatic Bookshelf},
+  Year                     = {2012}
+}
+
 @Article{citeulike:382810,
   Title                    = {MDA: A Formal Approach to Game Design and Game Research},
   Author                   = {Robin, Hunicke and Marc, Leblanc and Robert, Zubek},
@@ -1205,6 +1314,13 @@ MDA is a formal approach to understanding games {\OE} one which attempts to brid
   Priority                 = {2},
   Timestamp                = {2015.10.08},
   Url                      = {http://cs.northwestern.edu/\~{}hunicke/pubs/MDA.pdf}
+}
+
+@Book{robinson2013graph,
+  Title                    = {Graph databases},
+  Author                   = {Robinson, Ian and Webber, Jim and Eifrem, Emil},
+  Publisher                = {" O'Reilly Media, Inc."},
+  Year                     = {2013}
 }
 
 @InProceedings{Rojas:2013:MPG:2583008.2583033,
@@ -1239,6 +1355,18 @@ Technology},
   Timestamp                = {2015.10.13}
 }
 
+@Article{schindler2012characteristics,
+  Title                    = {I/O characteristics of NoSQL databases},
+  Author                   = {Schindler, Jiri},
+  Journal                  = {Proceedings of the VLDB Endowment},
+  Year                     = {2012},
+  Number                   = {12},
+  Pages                    = {2020--2021},
+  Volume                   = {5},
+
+  Publisher                = {VLDB Endowment}
+}
+
 @Article{Schweitzer2012,
   Title                    = {Reconciliation of the cloud computing model with US federal electronic health record regulations},
   Author                   = {Schweitzer, Eugene J},
@@ -1254,6 +1382,13 @@ Technology},
   Owner                    = {ilias},
   Timestamp                = {2015.10.12},
   Url                      = {http://jamia.oxfordjournals.org/content/19/2/161.abstract}
+}
+
+@Article{seeger2009key,
+  Title                    = {Key-Value stores: a practical overview},
+  Author                   = {Seeger, Marc and Ultra-Large-Sites, S},
+  Journal                  = {Computer Science and Media, Stuttgart},
+  Year                     = {2009}
 }
 
 @Book{androidHacks,
@@ -1286,6 +1421,18 @@ Technology},
   Doi                      = {10.1093/bja/85.3.487},
   Eprint                   = {http://bja.oxfordjournals.org/content/85/3/487.full.pdf+html},
   Url                      = {http://bja.oxfordjournals.org/content/85/3/487.abstract}
+}
+
+@Article{stonebraker2010sql,
+  Title                    = {SQL databases v. NoSQL databases},
+  Author                   = {Stonebraker, Michael},
+  Journal                  = {Communications of the ACM},
+  Year                     = {2010},
+  Number                   = {4},
+  Pages                    = {10--11},
+  Volume                   = {53},
+
+  Publisher                = {ACM}
 }
 
 @Article{FQS511,
@@ -1556,144 +1703,3 @@ URN: urn:nbn:de:0114-fqs0501297},
   Timestamp                = {2015.10.12}
 }
 
-@article{DeCandia:2007:DAH:1323293.1294281,
- author = {DeCandia, Giuseppe and Hastorun, Deniz and Jampani, Madan and Kakulapati, Gunavardhan and Lakshman, Avinash and Pilchin, Alex and Sivasubramanian, Swaminathan and Vosshall, Peter and Vogels, Werner},
- title = {Dynamo: Amazon's Highly Available Key-value Store},
- journal = {SIGOPS Oper. Syst. Rev.},
- issue_date = {December 2007},
- volume = {41},
- number = {6},
- month = oct,
- year = {2007},
- issn = {0163-5980},
- pages = {205--220},
- numpages = {16},
- url = {http://doi.acm.org/10.1145/1323293.1294281},
- doi = {10.1145/1323293.1294281},
- acmid = {1294281},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {performance, reliability, scalability},
-}
-
-@article{seeger2009key,
-  title={Key-Value stores: a practical overview},
-  author={Seeger, Marc and Ultra-Large-Sites, S},
-  journal={Computer Science and Media, Stuttgart},
-  year={2009}
-}
-
-@inproceedings{abadi2006integrating,
-  title={Integrating compression and execution in column-oriented database systems},
-  author={Abadi, Daniel and Madden, Samuel and Ferreira, Miguel},
-  booktitle={Proceedings of the 2006 ACM SIGMOD international conference on Management of data},
-  pages={671--682},
-  year={2006},
-  organization={ACM}
-}
-
-@article{abadi2009column,
-  title={Column-oriented database systems},
-  author={Abadi, Daniel J and Boncz, Peter A and Harizopoulos, Stavros},
-  journal={Proceedings of the VLDB Endowment},
-  volume={2},
-  number={2},
-  pages={1664--1665},
-  year={2009},
-  publisher={VLDB Endowment}
-}
-
-@book{banker2011mongodb,
-  title={MongoDB in action},
-  author={Banker, Kyle},
-  year={2011},
-  publisher={Manning Publications Co.}
-}
-
-@book{redmond2012seven,
-  title={Seven databases in seven weeks: a guide to modern databases and the NoSQL movement},
-  author={Redmond, Eric and Wilson, Jim R},
-  year={2012},
-  publisher={Pragmatic Bookshelf}
-}
-
-@inproceedings{he2008graphs,
-  title={Graphs-at-a-time: query language and access methods for graph databases},
-  author={He, Huahai and Singh, Ambuj K},
-  booktitle={Proceedings of the 2008 ACM SIGMOD international conference on Management of data},
-  pages={405--418},
-  year={2008},
-  organization={ACM}
-}
-
-@book{robinson2013graph,
-  title={Graph databases},
-  author={Robinson, Ian and Webber, Jim and Eifrem, Emil},
-  year={2013},
-  publisher={" O'Reilly Media, Inc."}
-}
-
-@book{kim1990introduction,
-  title={Introduction to object-oriented databases},
-  author={Kim, Won},
-  volume={90},
-  year={1990},
-  publisher={MIT press Cambridge, MA}
-}
-
-@incollection{bertino1997object,
-  title={Object-oriented databases},
-  author={Bertino, Elisa and Ooi, Beng Chin and Sacks-Davis, Ron and Tan, Kian-Lee and Zobel, Justin and Shidlovsky, Boris and Catania, Barbara},
-  booktitle={Indexing Techniques for Advanced Database Systems},
-  pages={1--38},
-  year={1997},
-  publisher={Springer}
-}
-
-@inproceedings{kim2014object,
-  title={The Object-Oriented Database System},
-  author={Kim, W and Nicolas, JM and Nishio, S},
-  booktitle={Deductive and Object-Oriented Databases: Proceedings of the First International Conference on Deductive and Object-Oriented Databases (DOOD89) Kyoto Research Park, Kyoto, Japan, 4-6 December 1989},
-  pages={223},
-  year={2014},
-  organization={Elsevier}
-}
-
-@article{leavitt2000whatever,
-  title={Whatever happened to object-oriented databases?},
-  author={Leavitt, Neal},
-  journal={Computer},
-  number={8},
-  pages={16--19},
-  year={2000},
-  publisher={IEEE}
-}
-
-@article{schindler2012characteristics,
-  title={I/O characteristics of NoSQL databases},
-  author={Schindler, Jiri},
-  journal={Proceedings of the VLDB Endowment},
-  volume={5},
-  number={12},
-  pages={2020--2021},
-  year={2012},
-  publisher={VLDB Endowment}
-}
-
-@article{stonebraker2010sql,
-  title={SQL databases v. NoSQL databases},
-  author={Stonebraker, Michael},
-  journal={Communications of the ACM},
-  volume={53},
-  number={4},
-  pages={10--11},
-  year={2010},
-  publisher={ACM}
-}
-
-@article{grazioli2014mapping,
-  title={Mapping relational databases into a distributed NoSQL},
-  author={GRAZIOLI, FRANCESCO},
-  year={2014},
-  publisher={Italy}
-}
