Stack technology -cloud -6

--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -207,8 +207,52 @@
 		
 		\subsubsection{NodeJs}
 		
-		\cite{Kaufm2009}
+		Το NodeJs είναι ένα ασύγχρονο cross-platform περιβάλλον εκτέλεσης που χρησιμοποιείται για την ανάπτυξη server-side διαδικτυακών εφαρμογών . Οι NodeJs εφαρμογές είναι γραμμένες σε JavaScript και μπορούν να εκτελεστούν σε OS X, Microsoft Windows, Linux, FreeBSD, NonStop, IBM AIX, IBM System z και IBM i. Το πρότζεκτ του NodeJs φιλοξενείται και υποστηρίζεται από το Node.js Foundation,  ένα συλλογικό έργο στο  Linux Foundation.
+		
+		 ανάπτυξης λογισμικού (κυρίως διακομιστών) χτισμένη σε περιβάλλον Javascript. Στόχος του Node είναι να παρέχει ένα εύκολο τρόπο δημιουργίας κλιμακωτών διαδικτυακών εφαρμογών. Σε αντίθεση από τα περισσότερα σύγχρονα περιβάλλοντα ανάπτυξης εφαρμογών δικτύων μία διεργασία node δεν στηρίζεται στην πολυνηματικότητα αλλά σε ένα μοντέλο ασύγχρονης επικοινωνίας εισόδου/εξόδου.[
+		
+		
+		
+		Το Node.js είναι ένα πρότζεκτ που παρουσίασε στο ευρωπαϊκό συνέδριο της JavaScript
+το 2009 (2009 European JSConf) στο Βερολίνο, ο προγραμματιστής Ryan Dahl. Το
+Node.js ή πιο απλά Node, είναι μια πλατφόρμα που μας επιτρέπει να γράψουμε
+JavaScript στην πλευρά του εξυπηρετητή (server-side JavaScript). Από το 2009 μέχρι
+σήμερα η πλατφόρμα έχει αναπτυχθεί ραγδαία και έχει χρησιμοποιηθεί σε πολλές
+μεγάλες εφαρμογές. Αποτελεί αυτήν την στιγμή το δεύτερο σε επισκεψιμότητα πρότζεκτ
+στο GitHub και μετράει περισσότερα από 90000 πακέτα (modules) δημοσιευμένα στον
+διαχειριστή πακέτων του Node (Node Package Manager, πιο γνωστού και ως NPM).
+Η ιδέα ήταν να δημιουργηθεί μια οδηγούμενη από τα γεγονότα (event-driven)
+πλατφόρμα, που θα χρησιμοποιεί λειτουργίες Εισόδου/Εξόδου χωρίς αναμονή (non
+blocking I/O) - ή ισοδύναμα θα χρησιμοποιεί ασύγχρονη Ε/Ε (asynchronous I/O) - με
+σκοπό να αυξήσει την απόδοση και την δυνατότητα κλιμάκωσης (scalability)
+διαδικτυακών εφαρμογών πραγματικού χρόνου. Το Node χρησιμοποιεί την V8, μια
+εικονική μηχανή που αναπτύχθηκε από την Google για τον Google Chrome και τρέχει
+κώδικα JavaScript. Η V8 δίνει στο Node μεγάλη αύξηση στην απόδοση, καθώς κάνει
+απευθείας μεταγλώττιση σε γλώσσα μηχανής αντί να εκτελεί bytecode ή να χρησιμοποιεί
+διερμηνευτή (interpreter).
+
+Για αρκετό καιρό, ήταν γνωστό στην προγραμματιστική κοινότητα ότι η ανάπτυξη ενός
+εξυπηρετητή σε μια πλατφόρμα που χρησιμοποιεί ασύγχρονες, οδηγούμενες από τα
+γεγονότα λειτουργίες Ε/Ε θα ήταν πολύ αποδοτική (τόσο από άποψη ταχύτητας όσο και
+απαιτήσεων μνήμης). Την γνώση αυτήν, αξιοποίησαν διάφορες γνωστές πλατφόρμες και
+γλώσσες προγραμματισμού. Μερικές από τις διασημότερες υλοποιήσεις είναι το Event
+Machine της Ruby, το AnyEvent της Perl και το Twisted της Python.
+Η υλοποίηση όμως μιας εφαρμογής σε ένα από αυτά τα πλαίσια απαιτεί τόσο την ειδική
+γνώση του ίδιου του πλαισίου όσο και την ειδική γνώση των βιβλιοθηκών του. Για
+παράδειγμα στο Event Machine, για να πετύχουμε λειτουργίες Ε/Ε χωρίς αναμονή
+περιοριζόμαστε στην χρησιμοποίηση μόνο ασύγχρονων βιβλιοθηκών φτιαγμένων ειδικά
+για το Event Machine. Αν χρησιμοποιήσουμε κάποια σύγχρονη βιβλιοθήκη, όπως οι
+περισσότερες βιβλιοθήκες της Ruby, η απόδοση του εξυπηρετητή μας θα πέσει, καθώς
+θα αναμένουμε συνεχώς κάποια λειτουργία Ε/Ε. Αντίθετα, το Node δημιουργήθηκε ως
+μια πλατφόρμα εξυπηρετητή με λειτουργίες Ε/Ε χωρίς αναμονή. Έτσι οποιαδήποτε
+λειτουργία στο Node είναι χωρίς αναμονή (non blocking) από την φύση της, χωρίς εμείς
+να χρειάζεται να χρησιμοποιήσουμε κάποια εξειδικευμένη βιβλιοθήκη για αυτό το
+σκοπό. Αυτός είναι ένας από τους βασικούς λόγους της μεγάλης αποδοχής που έτυχε το
+συγκεκριμένο πρότζεκτ.
+	
 		\subsubsection{Cloud και ασφάλεια Ιατρικών δεδομένων?}
+	\cite{Kaufm2009}	
+		
 	\subsection{Βάση Δεδομένων}
 	Η ιδέα ενός συστήματος βάσης δεδομένων τύπου NoSQL παρουσιάστηκε για πρώτη φορά το 1998 χωρίς να προχωρήσει όμως ιδιαίτερα και επανήλθε πάλι στο προσκήνιο το 2009, όταν και αναπτύχθηκαν αρκετές NoSQL λύσεις \cite{5993686}. Γεγονός το οποίο καθιστά τα συστήματα NoSQL καινούργια σε σχέση πάντα με τις σχεσιακές βάσεις δεδομένων που απαριθμούν 4 δεκαετίες ιστορίας \cite{Codd:1970:RMD:362384.362685}. Να δοθεί κάποιος ορισμός για τον όρο NoSQL δεν αποτελεί απλή διαδικασία δεδομένου ότι δεν αναφέρεται σε ένα συγκεκριμένο σύστημα διαχείρισης βάσεων δεδομένων, αλλά αποτελεί έναν γενικό όρο που περικλείει πολλά συστήματα βάσεων δεδομένων.
 	
@@ -443,7 +487,9 @@
 	\end{itemize}
 
 		
-	\subsection{Express και Jade Template Engine}
+	\subsection{Jade Template Engine}
+	
+	
 	\subsection{Mockups}
 	\subsection{Διασύνδεση με Social Networks}
 
