Stack technology -cloud -8

--- a/references.bib
+++ b/references.bib
@@ -23,6 +23,16 @@
   Publisher                = {VLDB Endowment}
 }
 
+@Book{silberschatz,
+  Title                    = {Operating System
+Concepts},
+  Author                   = {Abraham Silberschatz, Peter Baer Galvin, Greg Gagne},
+  Year                     = {2005},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.14}
+}
+
 @Article{aging,
   Title                    = {Humanity's Aging},
   Author                   = {National Institute on Aging},
@@ -546,7 +556,7 @@
   Pages                    = {23-42},
   Volume                   = {91},
 
-  __markedentry            = {[revekka:6]},
+  __markedentry            = {[revekka:]},
   Doi                      = {10.1007/s00607-010-0106-z},
   ISSN                     = {0010-485X},
   Keywords                 = {Cloud computing; Dynamic VM creation; Shibboleth; PaaS; e-Learning; 68M14; 68M20},
@@ -790,7 +800,6 @@ Timothy Grance},
   Pages                    = {23-27},
   Volume                   = {11},
 
-  __markedentry            = {[revekka:]},
   Address                  = {Los Alamitos, CA, USA},
   Doi                      = {http://doi.ieeecomputersociety.org/10.1109/MITP.2009.40},
   ISSN                     = {1520-9202},
@@ -1166,6 +1175,15 @@ Timothy Grance},
   Url                      = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2440532/}
 }
 
+@Book{cantelon,
+  Title                    = {Node.js in Action},
+  Author                   = {Mike Cantelon, Marc Harter, T. J. Holowaychuk, Nathan Rajlich,},
+  Year                     = {2013},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.14}
+}
+
 @Article{Misje2005,
   Title                    = {Motivation, recruitment and retention of voluntary non-remunerated blood donors: a survey-based questionnaire study},
   Author                   = {Misje, A. H. and Bosnes, V. and G{\aa}sdal, O. and Heier, H. E.},
@@ -1182,6 +1200,16 @@ Timothy Grance},
   Publisher                = {Blackwell Science Ltd},
   Timestamp                = {2015.09.27},
   Url                      = {http://dx.doi.org/10.1111/j.1423-0410.2005.00706.x}
+}
+
+@Book{surenda,
+  Title                    = {Node.js Essentials},
+  Author                   = {Surendra Mohan},
+  Publisher                = {Packt Publishing},
+  Year                     = {Sep 9, 2014},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.13}
 }
 
 @Electronic{bloodUK,
@@ -1408,6 +1436,15 @@ Technology},
   Year                     = {2007}
 }
 
+@Book{node,
+  Title                    = {Professional Node.js: Building Javascript Based Scalable Software},
+  Author                   = {John Wiley \& Sons},
+  Year                     = {01-Oct-2012},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.13}
+}
+
 @Article{Stainsby01092000,
   Title                    = {Management of massive blood loss: a template guideline},
   Author                   = {Stainsby, D. and MacLennan, S. and Hamilton, P. J.},
@@ -1461,6 +1498,24 @@ URN: urn:nbn:de:0114-fqs0501297},
 
   Owner                    = {ilias},
   Timestamp                = {2015.10.04}
+}
+
+@Article{Tilkov2010,
+  Title                    = {Node.js: Using JavaScript to Build High-Performance Network Programs},
+  Author                   = {Stefan Tilkov and Steve Vinoski},
+  Journal                  = {IEEE Internet Computing},
+  Year                     = {2010},
+  Number                   = {6},
+  Pages                    = {80-83},
+  Volume                   = {14},
+
+  __markedentry            = {[revekka:6]},
+  Address                  = {Los Alamitos, CA, USA},
+  Doi                      = {http://doi.ieeecomputersociety.org/10.1109/MIC.2010.145},
+  ISSN                     = {1089-7801},
+  Owner                    = {revekka},
+  Publisher                = {IEEE Computer Society},
+  Timestamp                = {2015.10.13}
 }
 
 @InProceedings{5993686,
