--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -205,31 +205,72 @@
 		\item Ευελιξία. Η διαθεσιμότητα τόσο των ασφαλών πόρων του ιδιωτικού cloud και όσο και των οικονομικότερων των δημοσίων cloud, παρέχει στους οργανισμούς περισσότερες ευκαιρίες για να εξερευνήσουν διαφορετικές επιχειρησιακές κατευθύνσεις.
 		\end{itemize} 
 		
-		\subsubsection{NodeJs}
+		
+		\subsection{NodeJs}
 	
-		Το Node.js είναι μια πλατφόρμα που μας επιτρέπει να γράψουμε JavaScript στην πλευρά του εξυπηρετητή (server-side JavaScript). Από το 2009 που δημιουργήθηκε μέχρι σήμερα η πλατφόρμα έχει εξελιχθεί ραγδαία και χρησιμοποιείται σε πολλές μεγάλες εφαρμογές. Αποτελεί αυτήν την στιγμή το δεύτερο σε επισκεψιμότητα πρότζεκτ στο GitHub και έχει παραπάνω από 90000 πακέτα (modules) που έχουν δημοσιευτεί στον διαχειριστή πακέτων του Node (Node Package Manager, NPM). Οι NodeJs εφαρμογές είναι γραμμένες σε JavaScript και μπορούν να εκτελεστούν σε OS X, Microsoft Windows, Linux, FreeBSD, NonStop, IBM AIX, IBM System z και IBM i. Το πρότζεκτ του NodeJs φιλοξενείται και υποστηρίζεται από το Node.js Foundation,  ένα συλλογικό έργο στο  Linux Foundation.
+		Το Node.js είναι μια πλατφόρμα που μας επιτρέπει να γράψουμε JavaScript στην πλευρά του εξυπηρετητή (server-side JavaScript). Από το 2009 που δημιουργήθηκε μέχρι σήμερα η πλατφόρμα έχει εξελιχθεί ραγδαία και χρησιμοποιείται σε πολλές μεγάλες εφαρμογές. Αποτελεί αυτήν την στιγμή το δεύτερο σε επισκεψιμότητα πρότζεκτ στο GitHub και έχει παραπάνω από 90000 πακέτα (modules) που έχουν δημοσιευτεί στον διαχειριστή πακέτων του Node (Node Package Manager, NPM). Οι NodeJs εφαρμογές είναι γραμμένες σε JavaScript και μπορούν να εκτελεστούν σε OS X, Microsoft Windows, Linux, FreeBSD, NonStop, IBM AIX, IBM System z και IBM i. Το πρότζεκτ του NodeJs φιλοξενείται και υποστηρίζεται από το Node.js Foundation,  ένα συλλογικό έργο στο  Linux Foundation. \cite{Tilkov2010}
 
 		Το NodeJs είναι μια οδηγούμενη από τα γεγονότα (event-driven) πλατφόρμα,  στην οποία μια διεργασία σε αντίθεση με τα περισσότερα σύγχρονα περιβάλλοντα ανάπτυξης εφαρμογών  δεν στηρίζεται στην πολυνηματικότητα αλλά χρησιμοποιεί λειτουργίες εισόδου/εξόδου χωρίς αναμονή (non blocking I/O) - ή ισοδύναμα χρησιμοποιεί ασύγχρονη Ε/Ε (asynchronous I/O) - . Αυτό έχει ως σκοπό να αυξήσει την απόδοση και την δυνατότητα κλιμάκωσης (scalability) των διαδικτυακών εφαρμογών πραγματικού χρόνου. Το NodeJs χρησιμοποιεί την V8, μια εικονική μηχανή που αναπτύχθηκε από την Google για τον Google Chrome και τρέχει κώδικα JavaScript. Η V8 δίνει στο NodeJs μεγάλη αύξηση στην απόδοση, καθώς κάνει απευθείας μεταγλώττιση σε γλώσσα μηχανής αντί να εκτελεί bytecode ή να χρησιμοποιεί διερμηνευτή (interpreter).
 
-Για αρκετό καιρό, ήταν γνωστό στην προγραμματιστική κοινότητα ότι η ανάπτυξη ενός
-εξυπηρετητή σε μια πλατφόρμα που χρησιμοποιεί ασύγχρονες, οδηγούμενες από τα
-γεγονότα λειτουργίες Ε/Ε θα ήταν πολύ αποδοτική (τόσο από άποψη ταχύτητας όσο και
-απαιτήσεων μνήμης). Την γνώση αυτήν, αξιοποίησαν διάφορες γνωστές πλατφόρμες και
-γλώσσες προγραμματισμού. Μερικές από τις διασημότερες υλοποιήσεις είναι το Event
-Machine της Ruby, το AnyEvent της Perl και το Twisted της Python.
-Η υλοποίηση όμως μιας εφαρμογής σε ένα από αυτά τα πλαίσια απαιτεί τόσο την ειδική
-γνώση του ίδιου του πλαισίου όσο και την ειδική γνώση των βιβλιοθηκών του. Για
-παράδειγμα στο Event Machine, για να πετύχουμε λειτουργίες Ε/Ε χωρίς αναμονή
-περιοριζόμαστε στην χρησιμοποίηση μόνο ασύγχρονων βιβλιοθηκών φτιαγμένων ειδικά
-για το Event Machine. Αν χρησιμοποιήσουμε κάποια σύγχρονη βιβλιοθήκη, όπως οι
-περισσότερες βιβλιοθήκες της Ruby, η απόδοση του εξυπηρετητή μας θα πέσει, καθώς
-θα αναμένουμε συνεχώς κάποια λειτουργία Ε/Ε. Αντίθετα, το Node δημιουργήθηκε ως
-μια πλατφόρμα εξυπηρετητή με λειτουργίες Ε/Ε χωρίς αναμονή. Έτσι οποιαδήποτε
-λειτουργία στο Node είναι χωρίς αναμονή (non blocking) από την φύση της, χωρίς εμείς
-να χρειάζεται να χρησιμοποιήσουμε κάποια εξειδικευμένη βιβλιοθήκη για αυτό το
-σκοπό. Αυτός είναι ένας από τους βασικούς λόγους της μεγάλης αποδοχής που έτυχε το
-συγκεκριμένο πρότζεκτ.
+	Το NodeJs επιτρέπει τη δημιουργία των web servers και εργαλεία δικτύωσης με τη χρήση της γλώσσας JavaScript και μια συλλογή των πακέτα (modules) τα οποία χειρίζονται διάφορες λειτουργίες του πυρήνα. \cite{node}  Τα πακέτα αυτά χειρίζονται το σύστημα αρχείων Ε/Ε, το σύστημα δικτύωσης (HTTP, TCP, UDP, DNS, ή TLS / SSL), τα δυαδικά δεδομένα (buffers)] και άλλες βασικές λειτουργίες. Τα πακέτα του NodeJs χρησιμοποιούν ένα API το οποίο έχει σχεδιαστεί για να μειώσει την πολυπλοκότητα της ανάπτυξης εφαρμογών για διακομιστή.
+
+	Χρησιμοποιείται κυρίως για την κατασκευή προγραμμάτων δικτύου, όπως διακομιστές δικτύου (web servers), γεγονός που το καθιστά παρόμοιο με την PHP και την Python. Η μεγαλύτερη διαφορά μεταξύ PHP και Node.js είναι ότι η PHP είναι μια γλώσσα με αναμονή, όπου η εκτέλεση των εντολών προχωρά μόνο όταν έχουν ολοκληρωθεί οι προηγούμενες, ενώ στο Node.js  οι εντολές εκτελούνται παράλληλα και χρησιμοποιούνται  κλήσεις με επιστροφή (callbacks) για να σηματοδοτηθεί η ολοκλήρωση. Το NodeJs υλοποιεί οδηγούμενο από γεγονότα προγραμματισμό για διαδικτυακές εφαρμογές σε JavaScript. Οι προγραμματιστές μπορούν να δημιουργήσουν εξαιρετικά επεκτάσιμους servers χωρίς τη χρήση νημάτων, χρησιμοποιώντας ένα απλοποιημένο οδηγούμενο από γεγονότα μοντέλο προγραμματισμού που χρησιμοποιεί κλήσεις επιστροφή για να σηματοδοτεί την ολοκλήρωση ενός στόχου. [\cite{surenda}
+
+
+\subsubsection{Javascript στον Εξυπηρετητή (server-side Javascript)}
+
+ 
+ Μέχρι πρόσφατα η Javascript χρησιμοποιούνταν μόνο στο front end των προγραμμάτων περιήγηση και οι προγραμματιστές ήταν υποχρεωμένοι να χρησιμοποιούν άλλες γλώσσες για τον προγραμματισμό στον εξυπηρετητή (server) και στον εξυπηρετούμενο (client). Το γεγονός ότι το Node μας δίνει την δυνατότητα να χρησιμοποιήσουμε την ίδια γλώσσα και στις δύο άκρες, απλουστεύει σημαντικά την ανάπτυξη των διαδικτυακών εφαρμογών.  Με αυτόν τον τρόπο, το μόνο προαπαιτούμενο για να αναπτύξει κανείς μια διαδικτυακή εφαρμογή μπορεί να είναι η γνώση Javascript. Εκτός από την μεγάλη διευκόλυνση που προσφέρει, το γεγονός ότι χρησιμοποιούμε Javascript και στις δύο πλευρές συντελεί σημαντικά και στην αύξηση της απόδοσης των διαδικτυακών εφαρμογών. Με χρήση του προγράμματος περιήγησης Google Chrome, η ταχύτητα με την οποία εκτελείται η JavaScript αυξάνεται με τρομερά ταχείς ρυθμούς.
+
+Η JavaScript δεν παρέχει κάποια βιβλιοθήκη για λειτουργίες Ε/Ε με σύγχρονο τρόπο και εξαιτίας αυτού  οι λειτουργίες που παρέχονται στην πλατφόρμα NodeJs είναι χωρίς αναμονή (non blocking). Οι συναρτήσεις στην JavaScript αποτελούν αντικείμενα πρώτης τάξης (first-class functions). Αυτό σημαίνει ότι η γλώσσα υποστηρίζει το πέρασμα μιας συνάρτησης σαν παράμετρο σε μια άλλη συνάρτηση και την επιστροφή μιας συνάρτησης σαν αποτέλεσμα από μια άλλη συνάρτηση. Επιπλέον, η JavaScript παρέχει το μοτίβο κλεισίματος (closure pattern). Με αυτόν τον τρόπο οι συναρτήσεις επιστρεφόμενης κλήσης (callback functions) έχουν την ιδιότητα να κράτανε στοιχεία και να ξέρουν το περιβάλλον λειτουργίας στο οποίο δηλώθηκαν και τις μεταβλητές που υπήρχαν σε αυτό το περιβάλλον.  Το NodeJs στηρίζεται στα παραπάνω δύο χαρακτηριστικά της Javascript.
+
+\subsubsection{Νήματα, μονονηματικό μοντέλο και πολυνηματισμός}
+
+
+		Οι παραδοσιακές προγραμματιστικές τεχνικές παγώνουν την συνέχιση της εκτέλεσης μιας διεργασίας, όταν μεσολαβήσει μια διακοπή ή μια λειτουργία E/E μέχρι αυτή να ολοκληρωθεί. Στις διαδικτυακές εφαρμογές, ο χρήστης όμως πρέπει να μπορεί να αλληλεπιδράσει με το σύστημα και να μην αναμένει την ολοκλήρωση της κάθε λειτουργίας Ε/Ε. Μία μέθοδος που δημιουργήθηκε για να αντιμετωπίσει αυτό το πρόβλημα είναι η χρήση νημάτων. Νήμα (thread) είναι ένα είδος ελαφριάς διεργασίας που μπορεί να χρησιμοποιήσει την κεντρική μονάδα επεξεργασίας και μοιράζεται την μνήμη με κάθε άλλο νήμα μέσα σε μια διεργασία. Όσο ένα νήμα βρίσκεται σε αναμονή ώσπου μια λειτουργία Ε/Ε να ολοκληρωθεί, ένα άλλο νήμα της ίδιας διεργασίας μπορεί να χρησιμοποιήσει την την κεντρική μονάδα επεξεργασίας. Μόλις η λειτουργία Ε/Ε ολοκληρωθεί, η εκτέλεση περνάει πάλι στο πρώτο νήμα και το δεύτερο κοιμάται. Η διαδικασία αυτή ονομάζεται πολυνηματισμός.
+		
+		
+				 \begin{figure}[h]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{multi-threaded.jpg}
+	    \caption{Πολυνηματικό Μοντέλο}
+	    \label{fig:multi}
+	\end{figure}
 	
+	
+	
+		 Ο πολυνηματισμός παρόλο που λύνει το πρόβλημα της απόδοσης και των μεγάλων νεκρών διαστημάτων της πρώτης υλοποίησης παρουσιάζει κάποια προβλήματα. Αρχικά απαιτεί πολύ χρόνο εργασίας από τον προγραμματιστή καθώς και την χρήση εξειδικευμένων λύσεων συγχρονισμού των νημάτων, όπως κλειδώματα (locks) και σημαφόρους (semaphores), με σκοπό να μην πραγματοποιηθεί ταυτόχρονη πρόσβαση δύο νημάτων στο ίδιο σημείο της μνήμης, η οποία θα έχει ως αποτέλεσμα ασυνέπειες.  \cite{silberschatz} Τέτοιου είδους λάθη (bugs) δεν είναι πάντα εύκολο να προβλεφθούν και πολλές φορές συμβαίνουν τυχαία, και είναι πολύ δύσκολος ο εντοπισμός τους. Ένα άλλο μειονέκτημα του μοντέλου του πολυνηματισμού είναι ότι το μοντέλο  δεν κλιμακώνει ιδιαίτερα καλά καθώς ο αριθμός των χρηστών αυξάνεται. Η διαχείριση όλων αυτών των νημάτων είναι ένα μεγάλο βάρος για το λειτουργικό σύστημα, τόσο λόγω των απαιτήσεων μνήμης όσο και λόγω της εναλλαγής περιβάλλοντος λειτουργίας. Η εναλλαγή της ΚΜΕ ανάμεσα στα νήματα απαιτεί την αποθήκευση της κατάστασης του τρέχοντος νήματος και την επαναφορά της κατάστασης του προς εκτέλεσης νήματος. 
+		
+		 
+		 Το NodeJs για να αντιμετωπίσει όλα αυτά τα προβλήματα, υιοθετεί μία διαφορετική προσέγγιση δημιουργώντας μόνο ένα νήμα το οποίο χειρίζεται όλες τις λειτουργίες Ε/Ε. Με αυτόν τον τρόπο επιτυγχάνει υψηλά επίπεδα κλιμάκωσης, που μπορεί να φτάσουν τις ένα εκατομμύριο ταυτόχρονες συνδέσεις. Στο σχήμα \ref{fig:single} φαίνεται ένα παράδειγμα από το μονονηματικό μοντέλο του NodeJs.
+		 
+			 \begin{figure}[h]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{single.png}
+	    \caption{ Το μονονηματικό μοντέλο του NodeJs.}
+	    \label{fig:single}
+	\end{figure} 
+
+\subsubsection{Event-driven model}		 
+
+		O οδηγούμενος από τα γεγονότα (event-driven) προγραμματισμός είναι ένα προγραμματιστικό μοντέλο όπου η ροή της εκτέλεσης “οδηγείται” από τα γεγονότα. Τα γεγονότα αυτά τα χειρίζονται είτε οι επιστρεφόμενες κλήσεις των γεγονότων είτε οι χειριστές συμβάντος. Μια επιστρεφόμενη κλήση είναι μια συνάρτηση η οποία καλείται όταν συμβαίνει ένα συγκεκριμένο γεγονός. Στα πλαίσια του εξυπηρετητή το γεγονός στο οποίο αναφερόμαστε συνήθως αποτελεί η ολοκλήρωση μιας λειτουργίας Ε/Ε. 
+		
+
+		/*na grapsw paradeigma.....
+		
+		Στις περιπτώσεις αυτές που οι λειτουργίες Ε/Ε επιστρέφουν μία συνάρτηση και όχι απλά μία τιμή έχουμε το μοντέλο του ασύγχρονου ή οδηγούμενου από γεγονότα προγραμματισμού. Έτσι επιτυγχάνεται η παραλληλοποίηση των Ε/Ε λειτουργιών,ενώ κάθε φορά η συνάρτηση επιστρεφόμενης κλήσης ενημερώνει για την ολοκλήρωση της αντίστοιχης λειτουργίας. Η JavaScript ανήκει σε αυτό το είδος προγραμματισμού. Η JavaScript υποστηρίζει επιπλέον το μοτίβο κλεισίματος (closure pattern) καθώς και το πέρασμα συναρτήσεων σαν παραμέτρους σε άλλη συνάρτηση (first-class functions).
+		
+
+		Ο οδηγούμενος από τα γεγονότα προγραμματισμός συνοδεύεται από έναν βρόχο γεγονότων (event loop). Ο βρόχος γεγονότων είναι μια ένα loop το οποίο σε κάθε επανάληψη πραγματοποιεί τα εξης: ανιχνεύει γεγονότα και ενεργοποιεί τον αντίστοιχο χειριστή συμβάντος. Ουσιαστικά κοιτάει σε κάθε επανάληψη ποια λειτουργία Ε/Ε έχει ολοκληρωθεί και καλεί την αντίστοιχη συνάρτηση επιστρεφόμενης κλήσης. Ο βρόχος γεγονότων υλοποιείται από ένα νήμα μέσα σε μια διεργασία και με βάση όσα αναφέρθηκαν για τα νήματα εύκολα προκύπτει ότι κάθε χρονική στιγμή τρέχει το πολύ ένα νήμα, στην περιπτωσή μας ένας διαχειριστής γεγονότος και ότι κάθε διαχειριστής γεγονότος τρέχει μέχρι να ολοκληρωθεί χωρίς διακοπή.
+		
+		\subsubsection{Ο Διαχειριστής Πακέτων του Node (Node Package Manager ,NPM)}
+		
+
+		Ο διαχειριστής πακέτων του Node (Node Package Manager ή NPM) παρέχει την δυνατότητα να κατεβάσουμε, να εγκαταστήσουμε και να τρέξουμς στην εφαρμογή μας πακέτα (modules) τρίτων. H εγκατάσταση του διαχειριστή  πακέτων πραγματοποιείται  αυτόματα όταν εγκαθιστούμε την πλατφόρμα του NodeJs. Μετά την εγκατάσταση του NodeJs, έχουμε πρόσβαση σε κάποια ενσωματωμένα πακέτα , τα οποία μας παρέχουν κάποιες διεπαφές εφαρμογών χαμηλού επιπέδου (low-level APIs) ώστε να μπορούμε να υλοποιήσουμε κάποιες βασικές λειτουργίες που χρειάζονται οι εφαρμογές. Αυτά τα πακέτα ονομάζονται ως ο πυρήνας του NodeJs . Στα πλαίσια σύνθετων εφαρμογών είναι σχεδόν απαραίτητο να συμπεριλάβουμε πακέτα τρίτων.
+
+
+		Το σύνολο όλων των πακέτων που έχουν φτιάξει και δημοσιοποιήσει οι προγραμματιστές διατηρείται σε μία κεντρική αποθήκη από τον διαχειριστή πακέτων του NodeJs. Ο διαχειριστής πακέτων παρέχει ένα εργαλείο γραμμής-εντολών (command-line tool) όπου ο χρήστης μπορεί να εγκαθιστά και να διαχειρίζεται τα πακέτα αυτά. H αναζήτηση τέτοιων πακέτων μπορεί να πραγματοποιηθεί είτε  μέσω της γραμμής εντολών είτε μέσω της σελίδας www.npmjs.org. Σε αυτήν την σελίδα παρουσιάζονται και διάφορα στατιστικά στοιχεία, όπως πόσα πακέτα υπάρχουν συνολικά, από ποια πακέτα εξαρτώνται περισσότερο άλλα πακέτα κ.λ.π. \cite{cantelon}
+
 		\subsubsection{Cloud και ασφάλεια Ιατρικών δεδομένων?}
 	\cite{Kaufm2009}	
 		
